# glabels-qt

./: CMakeLists.txt  README.md  build.sh  install.sh
backends/barcode/: CMakeLists.txt
backends/merge/: CMakeLists.txt
docs/: BUILD-INSTRUCTIONS-LINUX.md  BUILD-INSTRUCTIONS-WINDOWS.md  CONTRIBUTING.md  TRANSLATIONS.md
glabels/: AboutDialog.cpp  CMakeLists.txt  ColorPaletteItem.h  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  main.cpp
glabels-batch/: main.cpp
glabels/ui/: PreferencesDialog.ui
glbarcode/: CMakeLists.txt  QtRenderer.cpp
model/: CMakeLists.txt  Distance.cpp  FrameCd.cpp  FrameContinuous.cpp  FrameEllipse.cpp  FramePath.cpp  FrameRect.cpp  FrameRound.cpp  ModelBarcodeObject.cpp  ModelBarcodeObject.h  ModelBoxObject.cpp  ModelBoxObject.h  ModelEllipseObject.cpp  ModelEllipseObject.h  ModelImageObject.cpp  ModelImageObject.h  ModelLineObject.cpp  ModelLineObject.h  ModelObject.cpp  ModelObject.h  ModelShapeObject.cpp  ModelShapeObject.h  ModelTextObject.cpp  ModelTextObject.h  PageRenderer.cpp  RawText.cpp  Settings.cpp  StrUtil.cpp  SubstitutionField.cpp  SubstitutionField.h  XmlTemplateParser.cpp  XmlUtil.cpp
model/unit_tests/: CMakeLists.txt  TestModel.cpp  TestSubstitutionField.cpp
translations/: CMakeLists.txt  TRANSLATION_FILES.txt  XmlStrings.cpp  glabels_C.ts  glabels_fr.ts  glabels_fr_CA.ts  templates_C.ts
